--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   video_player: ^2.8.1
   google_maps_flutter: ^2.12.3
   uuid: ^4.0.0
-
+  file_picker: ^8.0.0+1
+  intl: ^0.18.1
 
 
 dev_dependencies:
@@ -61,6 +62,7 @@ dev_dependencies:
   build_runner: ^2.5.4
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
+
 
 
 # For information on the generic Dart part of this file, see the
