--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   file_picker: ^8.0.0+1
   intl: ^0.18.1
   google_fonts: ^6.3.0
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
