--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_fonts: ^6.3.0
   cached_network_image: ^3.4.1
   package_info_plus: ^4.2.0
+  chewie: ^1.7.4
 
 dev_dependencies:
   flutter_test:
