made feed loading and retrival optimizations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.4.1
   package_info_plus: ^4.2.0
   chewie: ^1.7.4
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
