--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,32 +28,40 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  supabase_flutter: ^2.8.0 # or latest
-  google_sign_in: ^6.2.1
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  app_links: ^6.1.4
-  cupertino_icons: ^1.0.8
+  # Core packages
+  supabase_flutter: ^2.8.0
+
+  # State management - Updated to latest stable
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   hooks_riverpod: ^2.6.1
   flutter_hooks: ^0.21.2
+
+  # Media & Files - CRITICAL UPDATES for video compatibility
+  video_player: ^2.9.2  # Updated from 2.8.1 - fixes rendering issues
+  chewie: ^1.8.5  # Updated from 1.7.4 - better video player wrapper
   image_picker: ^1.1.2
-  share_plus: ^7.2.1
-  video_player: ^2.8.1
-  google_maps_flutter: ^2.12.3
-  uuid: ^4.0.0
   file_picker: ^8.0.0+1
-  intl: ^0.18.1
-  google_fonts: ^6.3.0
   cached_network_image: ^3.4.1
-  package_info_plus: 9.0.0
-  chewie: ^1.7.4
+
+  # UI & Maps
+  google_maps_flutter: ^2.12.3
+  google_fonts: ^6.3.0
   shimmer: ^3.0.0
-  better_player: ^0.0.83
+  cupertino_icons: ^1.0.8
+
+  # Auth & Social
+  google_sign_in: ^6.2.1
+  share_plus: ^7.2.1
+  app_links: ^6.1.4
+
+  # Utilities
+  uuid: ^4.0.0
+  intl: ^0.18.1
+  package_info_plus: ^9.0.0
 
 
 dev_dependencies:
