--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-
+# Environment variables - NEVER COMMIT
+.env
+.env.local
+.env.*.local
 # IntelliJ related
 *.iml
 *.ipr
